--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,9 +3,11 @@
 @import "./components";
 
 @import "./components/btn";
+@import "./components/mobile-nav-trigger";
 
 @import "./sections/header";
 @import "./sections/about";
 @import "./sections/skills";
 @import "./sections/portfolio";
 @import "./sections/contact";
+@import "./sections/footer";
