--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,3 +1,11 @@
+// media queries break points
+
+$desktop: 1024px;
+$tablet: 768px;
+$phone: 590px;
+
+// global settings
+
 *,
 *::before,
 *::after {
@@ -12,4 +20,9 @@ html {
   overflow-x: hidden;
   background-color: $color-bg;
   color: $color-primary;
+  scroll-behavior: smooth;
+
+  @media screen and (max-width: $desktop) {
+    font-size: 50%;
+  }
 }
