--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -2,6 +2,10 @@
   padding: 7rem 10rem;
   margin: 0 auto;
 
+  @media screen and (max-width: $tablet) {
+    padding: 3rem 2rem;
+  }
+
   &__heading {
     margin-left: 5rem;
   }
@@ -10,23 +14,34 @@
     display: grid;
     padding: 4rem;
     grid-template-columns: auto auto 1fr;
-    grid-template-rows: 20rem;
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+
+    @media screen and (max-width: $desktop) {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 
   &__img {
-    //  padding: 5rem 6rem 13rem 5rem;
   }
 
   &__img img {
     display: block;
     border-radius: 50%;
     width: 10rem;
+    margin: 0 4rem;
+
+    @media screen and (max-width: $phone) {
+      margin: 0;
+    }
   }
 
   &__bio {
     border-right: 2px dotted $color-secondary;
     padding: 0 3rem;
+
+    @media screen and (max-width: $phone) {
+      border: none;
+    }
   }
 
   &__bio-list {
@@ -45,6 +60,9 @@
 
   &__bio-value {
     color: $color-secondary;
+    a {
+      color: inherit;
+    }
   }
 
   &__text {
@@ -52,5 +70,12 @@
     padding: 2.6rem;
     line-height: 1.7;
     letter-spacing: 0.04em;
+
+    @media screen and (max-width: $desktop) {
+      grid-column: span 2;
+    }
+    @media screen and (max-width: $phone) {
+      padding: 1rem;
+    }
   }
 }
