--- a/scss/sections/_contact.scss
+++ b/scss/sections/_contact.scss
@@ -1,14 +1,26 @@
 .contact {
+  padding: 0 10rem;
+  margin-bottom: 9rem;
+
+  @media screen and (max-width: $tablet) {
+    padding: 0 2rem;
+    margin-bottom: 4rem;
+  }
+
   &__wrapper {
-    padding: 0 10rem;
     display: flex;
+    box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
+
+    @media screen and (max-width: $phone) {
+      flex-direction: column;
+    }
   }
 
   &__info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: $color-secondary;
+    background-color: #ff9a3d;
     padding: 4rem 5rem;
     flex: 5;
     color: #ffffff;
@@ -37,11 +49,6 @@
     width: 25px;
     height: 25px;
     margin: 1rem;
-    fill: none !important;
-
-    path {
-      fill: none !important;
-    }
   }
 
   &__adress {
@@ -57,5 +64,57 @@
 
   &__form-box {
     flex: 7;
+    padding: 4rem;
+  }
+
+  &__form-heading {
+    font-size: 3.6rem;
+    margin-bottom: 2rem;
+    font-weight: 700;
+    color: #222222;
+    letter-spacing: 0.04em;
+    line-height: 1.7;
+    position: relative;
+  }
+
+  &__form-heading::before {
+    content: "";
+    border: 2rem solid transparent;
+    border-left: 2rem solid #ff9a3d;
+    display: block;
+    position: absolute;
+    left: -4rem;
+  }
+
+  &__form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__input {
+    padding: 2rem;
+    border-radius: 20px;
+    margin-bottom: 2rem;
+    border: none;
+    outline: none;
+  }
+
+  &__input--area {
+    resize: none;
+    line-height: 18rem;
+  }
+  &__input,
+  &__input::placeholder {
+    font-family: $font-secondary;
+    font-size: 1.8rem;
+    color: #a0a0a0;
+  }
+
+  &__input:focus {
+    box-shadow: inset 0px 5px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  .btn {
+    align-self: flex-end;
   }
 }
