--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -20,6 +20,10 @@
   &__menu {
     display: flex;
     list-style: none;
+
+    @media screen and (max-width: $phone) {
+      display: none;
+    }
   }
 
   &__link {
@@ -40,7 +44,7 @@
   &__hero {
     position: relative;
     height: 58rem;
-    background-image: url("../assets/photos/hero-layer.png"),
+    background-image: url("../assets/photos/hero-layer2.png"),
       url("../assets/photos/hero.jpg");
     background-size: cover;
     background-position: center;
@@ -49,7 +53,7 @@
   &__hero-text {
     position: absolute;
     left: 50%;
-    top: 25%;
+    top: 30%;
     transform: translate(-50%, -50%);
     text-align: center;
   }
@@ -58,6 +62,10 @@
     font-size: 10rem;
     color: $color-secondary;
     font-weight: 700;
+
+    @media screen and (max-width: $phone) {
+      font-size: 6rem;
+    }
   }
 
   &__hero-text h3 {
@@ -81,6 +89,9 @@
 
   &__sub {
     padding: 6rem;
+    @media screen and (max-width: $phone) {
+      padding: 2rem;
+    }
   }
   &__sub-heading {
     font-size: 3.6rem;
@@ -93,6 +104,9 @@
     grid-template-columns: repeat(2, 1fr);
     column-gap: 8rem;
     justify-items: start;
+    @media screen and (max-width: $phone) {
+      column-gap: 2rem;
+    }
   }
 
   &__sub-btns .btn:first-child {
