--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -6,7 +6,15 @@
   &__gallery {
     display: grid;
     grid-template-columns: repeat(11, 1fr);
-    grid-auto-flow: row;
+
+    @media screen and (max-width: $desktop) {
+      grid-template-rows: 30rem 30rem;
+    }
+
+    @media screen and (max-width: $tablet) {
+      grid-template-columns: 1fr 1fr;
+      grid-auto-rows: 250px;
+    }
   }
 
   &__item {
@@ -24,6 +32,7 @@
   }
   &__item--4 {
     grid-column: 1 / span 3;
+    grid-row: 2/3;
   }
   &__item--5 {
     grid-column: 4 / span 8;
@@ -62,6 +71,26 @@
       letter-spacing: 0.02em;
       margin-bottom: 3rem;
       max-width: 44rem;
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .portfolio {
+    &__item--1 {
+      grid-column: 1 / span 2;
+    }
+    &__item--2 {
+      grid-column: 1 / 2;
+    }
+    &__item--3 {
+      grid-column: 1 / span 2;
+    }
+    &__item--4 {
+      grid-column: 2 / 3;
+    }
+    &__item--5 {
+      grid-column: 1 / span 2;
     }
   }
 }
