--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -17,7 +17,7 @@
     box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.1);
 
     @media screen and (max-width: $desktop) {
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: auto 1fr;
     }
   }
 
@@ -41,6 +41,7 @@
 
     @media screen and (max-width: $phone) {
       border: none;
+      padding: 0 1rem;
     }
   }
 
