--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 @import "./base";
-@import "./components";
+@import "./utilities";
 
 @import "./components/btn";
 @import "./components/mobile-nav-trigger";
