--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,11 @@ html {
 }
 
 .mobile-nav-trigger {
+  position: fixed;
+  opacity: 1;
+  z-index: 100;
+  top: 3rem;
+  right: 2rem;
   padding: 1rem;
   cursor: pointer;
   background-color: transparent;
@@ -159,6 +164,10 @@ html {
   height: 2px;
   background-color: #515151;
   position: absolute;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+  z-index: 50;
   left: 0;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -171,6 +180,9 @@ html {
   height: 2px;
   background-color: #515151;
   position: absolute;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
   content: "";
   left: 0;
 }
@@ -181,6 +193,83 @@ html {
 
 .mobile-nav-trigger__inner::after {
   top: 10px;
+}
+
+.mobile__input {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 60;
+}
+
+.mobile__menu {
+  position: fixed;
+  top: 0;
+  right: 0;
+  opacity: 1;
+  background-color: rgba(255, 197, 61, 0.9);
+  height: 100%;
+  width: 80%;
+  z-index: 20;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style: none;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.mobile__link {
+  display: block;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 4rem;
+  padding: 2rem;
+  margin: 3rem 0;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+}
+
+.mobile__input:checked ~ .mobile__menu {
+  -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mobile__input:checked ~ .mobile-nav-trigger__box .mobile-nav-trigger__inner {
+  background-color: transparent;
+}
+
+.mobile__input:checked ~ .mobile-nav-trigger__box
+.mobile-nav-trigger__inner:before {
+  -webkit-transform: translateY(10px) rotate(-45deg);
+      -ms-transform: translateY(10px) rotate(-45deg);
+          transform: translateY(10px) rotate(-45deg);
+}
+
+.mobile__input:checked ~ .mobile-nav-trigger__box .mobile-nav-trigger__inner:after {
+  -webkit-transform: translateY(-10px) rotate(45deg);
+      -ms-transform: translateY(-10px) rotate(45deg);
+          transform: translateY(-10px) rotate(45deg);
 }
 
 .header__nav {
@@ -593,6 +682,7 @@ html {
 
 .portfolio__item {
   position: relative;
+  overflow: hidden;
 }
 
 .portfolio__item--1 {
@@ -634,10 +724,20 @@ html {
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  -webkit-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+}
+
+.portfolio__img:hover {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .portfolio__item-layer {
   position: absolute;
+  z-index: 10;
   width: 100%;
   height: 100%;
   top: 0;
@@ -662,6 +762,12 @@ html {
   letter-spacing: 0.02em;
   margin-bottom: 3rem;
   max-width: 44rem;
+}
+
+.portfolio__item-layer:hover ~ img {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 @media screen and (max-width: 768px) {
