--- a/scss/components/_mobile-nav-trigger.scss
+++ b/scss/components/_mobile-nav-trigger.scss
@@ -3,9 +3,15 @@
   height: 2px;
   background-color: #515151;
   position: absolute;
+  transition: all 0.3s;
 }
 
 .mobile-nav-trigger {
+  position: fixed;
+  opacity: 1;
+  z-index: 100;
+  top: 3rem;
+  right: 2rem;
   padding: 1rem;
   cursor: pointer;
   background-color: transparent;
@@ -25,6 +31,7 @@
 
   &__inner {
     @include trigger-line;
+    z-index: 50;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
@@ -44,5 +51,65 @@
 
   &__inner::after {
     top: 10px;
+  }
+}
+
+.mobile {
+  &__input {
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 60;
+  }
+
+  &__menu {
+    position: fixed;
+    top: 0;
+    right: 0;
+    opacity: 1;
+    background-color: rgba($color-secondary, 0.9);
+    height: 100%;
+    width: 80%;
+    z-index: 20;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    justify-content: center;
+    transform: translateX(100%);
+    transition: all 0.3s;
+  }
+
+  &__link {
+    display: block;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 4rem;
+    padding: 2rem;
+    margin: 3rem 0;
+    font-weight: 700;
+    font-family: $font-primary;
+  }
+
+  &__input:checked ~ .mobile__menu {
+    transform: translateX(0);
+  }
+
+  &__input:checked ~ .mobile-nav-trigger__box .mobile-nav-trigger__inner {
+    background-color: transparent;
+  }
+
+  &__input:checked
+    ~ .mobile-nav-trigger__box
+    .mobile-nav-trigger__inner:before {
+    transform: translateY(10px) rotate(-45deg);
+  }
+
+  &__input:checked ~ .mobile-nav-trigger__box .mobile-nav-trigger__inner:after {
+    transform: translateY(-10px) rotate(45deg);
   }
 }
