--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -19,6 +19,7 @@
 
   &__item {
     position: relative;
+    overflow: hidden;
   }
 
   &__item--1 {
@@ -43,10 +44,16 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: all 0.5s;
+  }
+
+  &__img:hover {
+    transform: scale(1.2);
   }
 
   &__item-layer {
     position: absolute;
+    z-index: 10;
     width: 100%;
     height: 100%;
     top: 0;
@@ -72,6 +79,10 @@
       margin-bottom: 3rem;
       max-width: 44rem;
     }
+  }
+
+  &__item-layer:hover ~ img {
+    transform: scale(1.2);
   }
 }
 
